# chatserver

./: CMakeLists.txt  README.md  build.sh
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp  friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  mysql.hpp  offlinemsgmodel.hpp  redis.hpp  user.hpp  usermodel.hpp
include/server/redis/: redis.hpp
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  friendmodel.cpp  groupmodel.cpp  main.cpp  mysql.cpp  offlinemsgmodel.cpp  redis.cpp  usermodel.cpp
third/: chat.sql
